# CoRex_RC_Car

./: .cz.toml  .gitignore  .gitmodules  .makeignore  Dockerfile  Jenkinsfile  Makefile  motion-sense Default.launch  project.yml
source/: .gitignore  CMakeLists.txt  make-build.mk
source/00_MCU_SDK/: 00_MCU_SDK.ioc  CMakeLists.txt  CMakeListstemp.txt  STM32F411XX_FLASH.ld  startup_stm32f411xe.s  stm32.ioc  toolchain.cmake
source/00_MCU_SDK/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
source/00_MCU_SDK/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
source/00_MCU_SDK/cmake/stm32cubemx/: CMakeLists.txt
source/01_MCU_PORT/: CMakeLists.txt  mp_common.h
source/01_MCU_PORT/mp_gpio/: mp_gpio.c  mp_gpio.h
source/01_MCU_PORT/mp_iic/: mp_iic.c  mp_iic.h
source/01_MCU_PORT/mp_timer/: mp_timer.c  mp_timer.h  mp_timer_capture.c  mp_timer_capture.h  mp_timer_general.c  mp_timer_general.h
source/01_MCU_PORT/mp_uart/: mp_uart.c  mp_uart.h
source/01_MCU_PORT/mp_uart/dma/: priv_dma_uart.c  priv_dma_uart.h
source/02_HW_API/: CMakeLists.txt
source/02_HW_API/ha_gpio/: ha_gpio.c  ha_gpio.h  ha_gpio_private.h
source/02_HW_API/ha_iic/: ha_iic.c  ha_iic.h  ha_iic_private.h
source/02_HW_API/ha_input_capture/: ha_input_capture.c  ha_input_capture.h  ha_input_capture_private.h
source/02_HW_API/ha_timer/: ha_timer.c  ha_timer.h  ha_timer_private.h
source/02_HW_API/ha_uart/: ha_uart.c  ha_uart.h  ha_uart_private.h
source/03_DEV_DRV/: CMakeLists.txt  dd_qmi86.c
source/03_DEV_DRV/dd_bmp388/: dd_bmp388.c  dd_bmp388.h  dd_bmp388_defs.h
source/03_DEV_DRV/dd_esp32/: dd_esp32.c  dd_esp32.h
source/03_DEV_DRV/dd_fsi6/: dd_fsi6.c  dd_fsi6.h
source/03_DEV_DRV/dd_qmi86/: dd_qmi86.c  dd_qmi86.h  dd_qmi86_defs.h
source/03_DEV_DRV/dd_status_led/: dd_status_led.c  dd_status_led.h
source/03_PFM_SVC/: CMakeLists.txt
source/03_PFM_SVC/ps_app_timer/: ps_app_timer.c  ps_app_timer.h
source/03_PFM_SVC/ps_iic_bus_scanner/: ps_iic_bus_scanner.c  ps_iic_bus_scanner.h
source/03_PFM_SVC/ps_logger/: ps_logger.c  ps_logger.h  serial_ifc.c  serial_ifc.h
source/03_PFM_SVC/ps_timer/: ps_timer.c  ps_timer.h
source/04_APP_SW/: CMakeLists.txt
source/04_APP_SW/inc/: baro.h  imu.h
source/04_APP_SW/src/: app.c  baro.c  imu.c
source/SW_UTILS/: CMakeLists.txt  su_byte_utils.h  su_common.h
source/SW_UTILS/su_ring_buffer/: su_ring_buffer.c  su_ring_buffer.h
source/SW_UTILS/su_string/: su_string.c  su_string.h
tests/01_MCU_PORT/: test_mp_dma_uart.c  test_mp_gpio.c  test_mp_iic.c  test_mp_uart.c
tests/02_HW_API/: test_ha_gpio.c  test_ha_iic.c  test_ha_input_capture.c  test_ha_uart.c
tests/03_DEV_DRV/: test_dd_bmp388.c  test_dd_esp32.c  test_dd_fsi6.c  test_dd_qmi86.c
tests/03_PFM_SVC/ps_dma_log/: test_ps_dma_log.c
tests/SW_UTILS/: test_su_ring_buffer.c
tests/cmock/: cmock_inc.h
tests/support/: UnityHelper.h
tools/clang-format/: make_format.mk
tools/clang-format/configs/: sources.clang-format  tests.clang-format
tools/clang-tidy/: config-merger.py  make_analyse.mk
tools/clang-tidy/configs/: bug.clang-tidy  cert.clang-tidy  core.clang-tidy  ignored.clang-tidy  misc.clang-tidy  perf.clang-tidy  read.clang-tidy
tools/jenkins/: jenkins.Dockerfile  make_jenkins.mk
